# multiplatform-sonivoxeas

./: .gitmodules  CMakeLists.txt  README.md  global.pri
.github/workflows/: linux-build.yml  windows-build.yml
cmdlnsynth/: CMakeLists.txt  main.cpp
guisynth/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mp_guisynth.desktop
libsvoxeas/: CMakeLists.txt  filewrapper.cpp  filewrapper.h  programsettings.cpp  programsettings.h  synthcontroller.cpp  synthcontroller.h  synthrenderer.cpp  synthrenderer.h
sonivox/: CMakeLists.txt
sonivox/host_src/: eas_hostmm.c
